--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,7 +132,8 @@ body {
 
 	&__text {
 		position: relative;
-		width: 240px;
+		max-width: 240px;
+		min-width: 200px;
 		padding-left: 35px;
 		font-size: 14px;
 		line-height: 18px;
@@ -181,12 +182,234 @@ body {
 	}
 }
 
+/* каталог и инструменты пользователя */
+.header-tools {
+	border-top: 3px solid $light-gray;
+	border-bottom: 2px solid $light-gray;
 
+	&__wrap {
+		position: relative;
+		display: flex;
+		justify-content: space-between;
+	}
 
-@media screen and (max-width: 1200px) {
+	.catalog {
+		&__btn {
+			position: relative;
+			@extend %ArialBold;
+			display: block;
+			width: 140px;
+			font-size: 16px;
+			text-transform: uppercase;
+			padding: 15px 20px;
+			background-color: $light-gray;
+			transition: .1s;
+
+			&::after {
+				position: absolute;
+				display: block;
+				content: "";
+				right: 20px;
+				top: 20px;
+				border: 6px solid transparent;
+				border-top: 6px solid #000;
+				transition: .1s;
+			}
+		}
+
+		&:hover .catalog__btn {
+			background-color: $yellow;
+		}
+
+		&:hover .catalog__btn::after {
+			transform: rotate(-90deg) translate(3px, 3px);
+		}
+
+		&__type-list {
+			display: none;
+			// display: flex;
+			position: absolute;
+			top: 0;
+			left: 140px;
+		}
+
+		&__type-name {
+			display: inline-block;
+			position: relative;
+			@extend %ArialBold;
+			font-size: 14px;
+			text-transform: uppercase;
+			padding: 16px 20px;
+			background-color: $light-gray;
+			transition: .1s;
+
+			&:hover {
+				background-color: #000;
+				color: $yellow;
+			}
+
+			&:hover::after {
+				position: absolute;
+				display: block;
+				content: "";
+				bottom: 0;
+				left: 50%;
+				transform: translateX(-50%);
+				border-top: 6px solid transparent;
+				border-bottom: 6px solid #fff;
+				border-left: 9px solid transparent;
+				border-right: 9px solid transparent;
+			}
+		}
+
+		&:hover .catalog__type-list {
+			display: flex;
+		}
+
+		.catalog__type-list li:hover .catalog__item-wrap {
+			display: flex;
+		}
+
+		.catalog__type-list li:hover .catalog__type-name {
+			background-color: #000;
+			color: $yellow;
+
+			&::after {
+				position: absolute;
+				display: block;
+				content: "";
+				bottom: 0;
+				left: 50%;
+				transform: translateX(-50%);
+				border-top: 6px solid transparent;
+				border-bottom: 6px solid #fff;
+				border-left: 9px solid transparent;
+				border-right: 9px solid transparent;
+			}
+		}
+
+		&__item-wrap {
+			display: none;
+			// display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+			position: absolute;
+			top: 100%;
+			left: -140px;
+			width: 1200px;
+			padding: 30px;
+			background-color: #fff;
+		}
+
+		&__item-list {
+			display: flex;
+			justify-content: space-between;
+			flex-wrap: wrap;
+
+			li {
+				position: relative;
+				margin-bottom: 20px;
+				width: 190px;
+				height: 160px;
+				text-align: center;
+
+				&:hover .catalog__item-bg {
+					position: absolute;
+					display: flex;
+					justify-content: space-around;
+					align-items: center;
+					background-color: rgba(255, 236, 0, .8);
+					bottom: 0;
+					width: 100%;
+					height: 100%;
+
+					&::after {
+						position: absolute;
+						display: block;
+						content: "";
+						bottom: 0;
+						left: 50%;
+						transform: translateX(-50%);
+						border-top: 6px solid transparent;
+						border-bottom: 6px solid #fff;
+						border-left: 9px solid transparent;
+						border-right: 9px solid transparent;
+					}
+				}
+
+				&:hover .catalog__item-link {
+					display: inline-block;
+					width: 160px;
+					top: 50%;
+					font-size: 14px;
+					line-height: 18px;
+					padding: 10px;
+					border: 2px solid #000;
+				}
+			}
+		}
+
+		&__item-img {
+			width: 180px;
+			height: 120px;
+		}
+
+		&__item-link {
+			@extend %ArialBold;
+			font-size: 12px;
+			line-height: 14px;
+			text-transform: uppercase;
+			text-align: center;
+		}
+
+		&__extra-list {
+			display: flex;
+			justify-content: flex-start;
+			padding: 20px;
+			background-color: $light-gray;
+
+			li {
+				display: flex;
+				flex-flow: column;
+				justify-content: space-around;
+				align-items: center;
+				width: 190px;
+				height: 100px;
+				margin-right: 20px;
+				text-align: center;
+				background-color: #fff;
+			}
+
+			img {
+				width: 66px;
+				height: 55px;
+			}
+		}
+	}
+
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.user-tools {
+		display: flex;
+		justify-content: space-between;
+	}
 }
 
-@media screen and (max-width: 992px) {}
+
+
+/* адаптив */
+@media screen and (max-width: 1220px) {
+	.container {
+		padding: 0px 10px;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+}
 
 @media (max-width: 768px) {
 	.header-menu {
@@ -199,6 +422,7 @@ body {
 			height: 40px;
 			z-index: 30;
 			background-color: $gray;
+			cursor: pointer;
 	
 			&:hover {
 				background-color: $dark-gray;
@@ -322,11 +546,32 @@ body {
 
 		&__wrap {
 			margin: 0 auto;
+			justify-content: space-around;
+		}
+
+		&__inner {
+			margin-bottom: 20px;
+		}
+
+		&__about {
+			justify-content: space-around;
 		}
 	}
 }
 
-@media (max-width: 576px) {}
+@media (max-width: 425px) {
+	.header-info {
+		&__about {
+			justify-content: center;
+			flex-flow: column;
+		}
+
+		&__text {
+			margin-bottom: 20px;
+			width: 100%;
+		}
+	}
+}
 
 @media (max-width: 425px) {}
 
